# hackerrank-orchestrate-may26

./: .gitignore  README.md
code/: .env.example  .gitignore  README.md  build_corpus.py  config.py  exceptions.py  main.py  pyproject.toml  schemas.py
code/corpus/: enrich.py  index.py  manifest.py  normalize.py  reconcile.py  taxonomy.py
code/prompts/corpus_enrich/: v1.yaml
code/prompts/corpus_reconcile/: v1.yaml
code/prompts/corpus_taxonomy/: v1.yaml
code/prompts/stage0_guardrails/: v1.yaml
code/prompts/stage1_reformulate/: v1.yaml
code/prompts/stage25_request_type/: v1.yaml
code/prompts/stage2_decompose/: v1.yaml
code/prompts/stage3_classify/: v1.yaml
code/prompts/stage4_compose/: v1.yaml
code/prompts/stage5_quality/: v1.yaml
code/stages/: stage0_guardrails.py  stage1_reformulate.py  stage25_request_type.py  stage275_domain_inference.py  stage2_decompose.py  stage3_classify.py  stage3_retrieve.py  stage4_compose.py  stage5_quality.py  stage6_validate.py
code/utils/: bm25.py  llm.py  prompt_registry.py  provider.py  stage_handler.py  tracer.py
eval/: collect_feedback.py  ground_truth.csv  promote_to_ground_truth.py  run_eval.py
eval/judge_prompts/: v1.yaml
