[project]
name = "support-triage-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "rank-bm25>=0.2.2",
    "guardrails-ai>=0.5.10",
    "pyyaml>=6.0.1",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.0",
    "anthropic>=0.25.0",
    "langfuse>=2.0.0",
    "groq>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-mock>=3.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stages", "corpus", "utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]
